src/objects/CTSK_INSP__Object_Statistic__c.object
<CustomObject>
    <description>Use to record statistics about objects using the Clear Task Analyzer application.</description>
    <fields>
        <fullName>CTSK_INSP__Custom_Object_Text__c</fullName>
        <formula>IF( CTSK_INSP__Custom_Object__c , &apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used to convert the checkbox field &apos;Custom Object&apos; to text, to be used for other operations.</inlineHelpText>
        <label>Custom Object Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTSK_INSP__Custom_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the object being analyzed is a custom object.</description>
        <label>Custom Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTSK_INSP__Last_Run__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked to identify the row created when the application was last run for this object</description>
        <label>Last Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTSK_INSP__Number_Fields__c</fullName>
        <description>The total number of fields in the object being analyzed</description>
        <label># Fields</label>
        <summaryForeignKey>CTSK_INSP__Field_Statistic__c.CTSK_INSP__Object_Statistic__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CTSK_INSP__Number_Records__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total number of records in the object</description>
        <label># Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTSK_INSP__Object__c</fullName>
        <description>Object name from Metadata. Uses display name, not API name for custom objects</description>
        <label>Object</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTSK_INSP__Record_First_Created_Date__c</fullName>
        <description>The date a record of this type was first created</description>
        <label>Record First Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTSK_INSP__Record_Last_Created_Date__c</fullName>
        <description>The date a record of this type was last created</description>
        <label>Record Last Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTSK_INSP__Record_Last_Modified_Date__c</fullName>
        <description>The date a record of this type was last modified</description>
        <label>Record Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTSK_INSP__Request_End__c</fullName>
        <inlineHelpText>The time was the request was completed.</inlineHelpText>
        <label>Request End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CTSK_INSP__Request_Start__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <inlineHelpText>The time was the request was made.</inlineHelpText>
        <label>Request Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CTSK_INSP__Request_Time__c</fullName>
        <description>The number of minutes taken to complete the analysis. 1440 is the number of minutes in the day, which is then multiplied by the difference between the dates in order to resolve to minutes.</description>
        <formula>(CTSK_INSP__Request_End__c - CTSK_INSP__Request_Start__c) * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of minutes taken to complete the analysis. The value is zero when processed in under a minute as the value is rounded down to the closest minute.</inlineHelpText>
        <label>Request Time (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Object Statistic</label>
    <listViews>
        <fullName>CTSK_INSP__All</fullName>
        <columns>NAME</columns>
        <columns>CTSK_INSP__Object__c</columns>
        <columns>CTSK_INSP__Number_Fields__c</columns>
        <columns>CTSK_INSP__Number_Records__c</columns>
        <columns>CTSK_INSP__Custom_Object__c</columns>
        <columns>CTSK_INSP__Last_Run__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CTSK_INSP__Created_Today</fullName>
        <columns>NAME</columns>
        <columns>CTSK_INSP__Object__c</columns>
        <columns>CTSK_INSP__Number_Fields__c</columns>
        <columns>CTSK_INSP__Number_Records__c</columns>
        <columns>CTSK_INSP__Custom_Object__c</columns>
        <columns>CTSK_INSP__Last_Run__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <listViews>
        <fullName>CTSK_INSP__Last_Run</fullName>
        <columns>NAME</columns>
        <columns>CTSK_INSP__Object__c</columns>
        <columns>CTSK_INSP__Number_Fields__c</columns>
        <columns>CTSK_INSP__Number_Records__c</columns>
        <columns>CTSK_INSP__Custom_Object__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CTSK_INSP__Last_Run__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Last Run</label>
    </listViews>
    <listViews>
        <fullName>CTSK_INSP__My_Object_Statistics</fullName>
        <columns>NAME</columns>
        <columns>CTSK_INSP__Object__c</columns>
        <columns>CTSK_INSP__Number_Fields__c</columns>
        <columns>CTSK_INSP__Number_Records__c</columns>
        <columns>CTSK_INSP__Custom_Object__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Object Statistics</label>
    </listViews>
    <nameField>
        <label>Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Statistics</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>